# com.unity.webrtc

.github/workflows/: build-plugins.yml
BuildScripts~/: README.md
Plugin~/: CMakeLists.txt  README.md
Plugin~/WebRTCPlugin/: CMakeLists.txt  Context.cpp  GpuMemoryBuffer.cpp  PlatformBase.h  WebRTCPlugin.cpp  WebRTCPlugin.h  pch.h
Plugin~/WebRTCPlugin/Codec/: CMakeLists.txt
Plugin~/WebRTCPlugin/GraphicsDevice/: CMakeLists.txt
Plugin~/WebRTCPlugin/GraphicsDevice/D3D11/: D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.h  D3D11Texture2D.cpp
Plugin~/WebRTCPlugin/GraphicsDevice/D3D12/: D3D12GraphicsDevice.cpp  D3D12GraphicsDevice.h
Plugin~/WebRTCPluginTest/: CMakeLists.txt
Runtime/Plugins/iOS/webrtc.framework/: Info.plist
Runtime/Scripts/: WebRTC.cs
